# HistoryCrossword

./: CMakeLists.txt  README.md
include/: Crossword.h  CrosswordLevel.h  Game.h  GameState.h  ICrosswordRenderer.h  Level.h  MainMenu.h  MainMenuState.h  ResourceManager.h  Screen.h  SimpleRenderer.h  State.h  StateMachine.h  StateManager.h  Utils.h  crossword.h  question.h  utils.h
include/core/: ianswerchecker.h  icrossword.h  icrosswordloader.h
include/data/: crossworddata.h  jsoncrosswordloader.h
include/logic/: answerchecker.h
include/ui/: crosswordwidget.h  inputfieldfactory.h  levelselect.h  mainwindow.h
resources/: styles.qss
resources/data/: level1.json  level2.json  level3.json
src/: Crossword.cpp  CrosswordLevel.cpp  Game.cpp  GameState.cpp  Level.cpp  Main.cpp  MainMenu.cpp  MainMenuState.cpp  ResourceManager.cpp  SimpleRenderer.cpp  StateMachine.cpp  StateManager.cpp  Utils.cpp  crossword.cpp  crosswordwidget.cpp  levelselect.cpp  main.cpp  mainwindow.cpp  utils.cpp
src/data/: crossword.cpp  jsoncrosswordloader.cpp
src/logic/: answerchecker.cpp
src/ui/: crosswordwidget.cpp  inputfieldfactory.cpp  mainwindow.cpp
